--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,6 @@
 
 Также должен присутствовать поиск, сортировка от а-я и наоборот-->
 
-<script src="js/app.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
